Fixes minor color change for readability:

--- a/vtsite/vehicles/static/css/vehicles.css
+++ b/vtsite/vehicles/static/css/vehicles.css
@@ -94,3 +94,7 @@ table input, textarea {
   background-color: #efefef;
   border-radius: 4px;
 }
+
+table select {
+  background-color: #ffffff;
+}
